[package]
name = "bittrex-api"
version = "0.1.0"
authors = ["Christian Gerrit Gazic <christian.gazic@dvbbank.com>"]

[dependencies]
hmac = "0.4.2"
sha2 = "0.6.0"
generic-array = "0.8.2"
time = "0.1.38"
reqwest = "0.7.2"
hyper = "0.11.2"
hyper-tls = "0.1.2"
tokio-core = "0.1.9"
futures = "0.1.14"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"